# standup-reminder

./: .gitignore  CLAUDE.md  FEATURE_IDEAS.md  LICENSE  README.md  app-shared.js  control-renderer.js  control.html  main.js  package-lock.json  package.json  preload.js  reminder.html  renderer.js  update-checker.js  vite.config.mjs
assets/: icon.icns
scripts/: release-notes-v1.5.0.md  run-tauri.mjs  upload-release-assets.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
